# serial_terminal_jh

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
doc/: Instalar compilador GCC y wxWidgets en Windows.odt
